# candle-extensions

./: .gitmodules  Cargo.toml  README.md
candle-cublaslt/: Cargo.toml
candle-cublaslt/src/: lib.rs
candle-flash-attn-v1/: Cargo.toml  build.rs
candle-flash-attn-v1/tests/: flash_attn_tests.rs
candle-layer-norm/: Cargo.toml  build.rs
candle-moe/: Cargo.toml  README.md  build.rs
candle-moe/kernels/: moe_align_sum_kernels.cu  topk_softmax_kernels.cu
candle-moe/src/: ffi.rs  lib.rs
candle-moe/tests/: moe_sum_tests.rs  topk_softmax_tests.rs
candle-rotary/: Cargo.toml  build.rs
candle-rotary/src/: lib.rs
