[package]
name = "candle-layer-norm"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
description = "Layer Norm layer for the candle ML framework."
homepage = "https://github.com/huggingface/candle-extensions/candle-layer-norm/"
documentation = "https://docs.rs/candle-layer-norm"

[dependencies]
candle = { version = "0.*", package = "candle-core", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
