[package]
name = "candle-moe"
description = "fused MoE layer for the candle ML framework."
homepage = "https://github.com/huggingface/candle-extensions/candle-moe/"
documentation = "https://docs.rs/candle-moe"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace  = true
license.workspace = true
repository.workspace = true

[dependencies]
candle = { version = "0.8", package = "candle-core", features = ["cuda"] }
cudarc = { version = "0.13.3", features = ["cuda-12080"], default-features = false }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = "0.1.5"

[dev-dependencies]
anyhow = { version = "1" }
candle-nn = { version = "0.8", features = ["cuda"] }
candle-transformers = { version = "0.8" }
