[package]
name = "candle-moe"
description = "fused MoE layer for the candle ML framework."
homepage = "https://github.com/huggingface/candle-extensions/candle-moe/"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace  = true
license.workspace = true
repository.workspace = true

[dependencies]
candle = { version = "0.8", package = "candle-core", features = ["cuda"] }
cudarc = { version = "0.13.3", features = ["cuda-12080"], default-features = false }
half = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
bindgen_cuda = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
candle-nn = { version = "0.8", features = ["cuda"] }
candle-transformers = { version = "0.8" }
